update project structure

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,15 +1,10 @@
 cmake_minimum_required(VERSION 3.2)
+
 project(evaluator)
+
+SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
+SET(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)
 set(CMAKE_CXX_STANDARD 17)
-set(CMAKE_CXX_FLAGS_DEBUG "-Wall -O0 -g")
-set(CMAKE_CXX_FLAGS_RELEASE "-Wall -O2")
-include_directories(./include)
 
-add_executable(eval src/Context.cpp 
-                    src/Function.cpp
-                    src/Tokenizer.cpp
-                    src/main.cpp)
-
-add_library(evaluator STATIC src/Context.cpp 
-                            src/Function.cpp
-                            src/Tokenizer.cpp)
+add_subdirectory(src)
+add_subdirectory(app)
